--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
   <div class="playbox" onclick="play(8)"></div>
 </div>
 
+<div id="myModal" class="modal">
+  <div class="modalContent">
+    <span class="close">&times;</span>
+    <p id="myModalText"></p>
+  </div>
+</div>
+
+
 </body>
 </html> 
+
+
