--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 
 <div id="myModal" class="modal">
   <div class="modalContent">
-    <span class="close">&times;</span>
+    <button id="closeBtn">Close</button>
     <p id="myModalText"></p>
+    <button id="restartBtn">Restart</button>
   </div>
 </div>
 
 
 </body>
 </html> 
-
-
